--- a/About.html
+++ b/About.html
@@ -38,6 +38,13 @@
     </header>
 
     <main>
+        <section class="padding-block-900">
+            <div class="container">
+
+
+            </div>
+
+        </section>
         
 
 
@@ -91,7 +98,7 @@
                 </div>
                 <div class="primary-footer-nav">
                     <nav class="footer-nav">
-                        <ul class="flow" style="--flow-spacer: 1em" aria-label="Footer" role="list">
+                        <ul class="flow fw-bold" style="--flow-spacer: 1em" aria-label="Footer" role="list">
                             <li><a href="#">Home</a></li>
                             <li><a href="#">Pricing</a></li>
                             <li><a href="#">Products</a></li>
@@ -107,7 +114,7 @@
                         <input class="footerForm" type="email">
                         <button data-type="inverted" class="button" data-shadow="none">Go</button>
                     </form>
-                    <p>Copyright 2023. All Rights Reserved</p>
+                    <p class="fw-bold">Copyright 2023. All Rights Reserved</p>
                 </div>
             </div>
         </div>
