--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nikola Sce</title>
+    <title>Kevin Powell | CSS Evangelist</title>
     <link href="style.css" rel="stylesheet" />
 
     <link rel="stylesheet"
@@ -80,12 +80,12 @@
                     <p class="section_subtitle">learn for free</p>
                 </header>
                 <p>
-                    <strong>Weekly vlog or shorts videos of my adventures in life.</strong>
-                    A big backlog of my previous adventures will be released subsequently
-                    <strong>Sprinkle in some volleyball magic and videos on top to make it spicy</strong>
+                    <strong>Weekly front-end web development & design tips, tricks, and tutorials. </strong>
+                    With a focus on HTML & CSS, along with a splash of JS, my videos focus on understanding <strong>fundamental concepts,</strong>  
+                    others explore <strong>little known or often misused CSS properties,</strong>  and there are long series that explore taking everything and <strong>building out actual pages.</strong> 
                 </p>
                 <p></p>
-                <a href="https://www.youtube.com/@nikolasce9" class="button">Watch on yt</a>
+                <a href="https://www.youtube.com/kevinpowell" class="button">Watch on yt</a>
 
             </div>
 
@@ -99,8 +99,9 @@
                     <p class="section_subtitle">quick hit tips & tricks</p>
                 </header>
                 <p>
-                    While learning Frontend development or just life in general, I come across a lot of <strong>fun snippets of information</strong> and <strong>little known life hacks or CSS properties</strong>
-                    that arent really worth building full videos about.
+                    While creating my YouTube videos, I come across a lot of 
+                    <strong>fun snippets of information and little known CSS properties </strong> 
+                    that aren't really worth building full videos about.
                 </p>
                 <p>
                     I share these little bits of information — plus the occasional deep dive — through my articles.
@@ -110,36 +111,38 @@
 
         </section>
 
-        <section aria-labelledby="volleyball-title" class="home-section volleyball">
+        <section aria-labelledby="courses-title" class="home-section course">
             <div class="container flow volleyballDiv">
                 <header>
-                    <h2 class="section_title">volleyball</h2>
-                    <p class="section_subtitle">my complete journey</p>
+                    <h2 class="section_title text-neutral-100">courses</h2>
+                    <p class="section_subtitle text-neutral-100">step up your front-end game</p>
                 </header>
                 <p>
-                    I dedicated most of my life to volleyball, played internationally and achieved success.
-                    While it had its ups and downs <strong>I'm proud of my acomplishments and the path I took</strong>
+                    <strong>Premium courses to help you step up your front-end game in short order.</strong> 
                 </p>
-                <p>I will share my full journey and some insights into my history while maybe revealing some new behind the scenes</p>
-                <a href="Volleyball.html" class="button volleyballColor">Take me there</a>
+                <p>
+                    While there are a ton of free resources out there, it can be hard to figure out which ones are good, which are bad, and in what order to follow them in.
+                    Because of that, I’ve decided to start creating premium courses to help.
+                    <strong>They are deep dives into specific topics, helping you level up your game in as little time as possible</strong>
+                </p>
+                <p>
+                    I have a number of courses available covering a wide range of CSS goodness. Check out my <a href="">courses page</a> to see them all.
+                </p>
+                <a href="Volleyball.html" class="button" data-reverse="true">LET'S STEP UP MY GAME</a>
             </div>
         </section>
 
-        <section aria-labelledby="newsletter-title" class="home-section newsletter">
+        <section aria-labelledby="patreon-title" class="home-section patreon" style="--clr: #e12911">
             <div class="container flow">
                 <header>
-                    <h2 class="section_title">newsletter</h2>
-                    <p class="section_subtitle">in progress...</p>
+                    <h2 class="section_title">patreon</h2>
+                    <p class="section_subtitle">help support me</p>
                 </header>
                 <p>
-                    I'm still undecided whether i should start a newsletter. Never even considered one until i found
-                    a <a href="https://www.youtube.com/watch?v=ozWseKZV6Ac" class="youtubeLink" target="_blank">youtube video</a> about it
+                    Patreon is a nice, simple way to support creators who provide you with value. 
+                    Thanks to my patrons I've been able to upgrade my equipment a few times now, and they've enabled me to devote more time to making videos.
                 </p>
-                <p>
-                    Ever since then im imagining how cool it would be to ramble about things and maybe spark
-                    some ideas in other people!
-                </p>
-                <p>TBD!</p>
+                <a href="https://patreon.com/kevinpowell" class="button">support me on Patreon</a>
             </div>
         </section>
 
@@ -149,18 +152,16 @@
     <footer class="primary-footer">
         <p>Find me elsewhere on the web as well:</p>
         <ul role="list" class="social-list">
-            <li>
-                <a href="https://www.linkedin.com/in/nikola-scerbakov-466b25284/">LinkedIn</a>
-            </li>
-
-            <li><a href="https://www.instagram.com/nikolasce/">Instagram</a></li>
-            <li><a href="https://www.youtube.com/@nikolasce9">Youtube</a></li>
-            <li><a href="in progress...">Twitch</a></li>
-            <li><a href="https://github.com/Nikolascerbakov">Github</a></li>
-            <li><a href="https://www.facebook.com/nikola.scerbakov">Facebook</a></li>
+            <li><a href="https://www.youtube.com/kevinpowell">Youtube</a> </li>
+            <li><a href="https://www.twitch.tv/kevinpowellcss">Twitch</a></li>
+            <li><a href="https://front-end.social/@kevinpowell">Mastodon</a></li>
+            <li><a href="https://twitter.com/kevinJPowell">Twitter</a></li>
+            <li><a href="https://codepen.io/kevinpowell/">Codepen</a></li>
+            <li><a href="https://discord.com/invite/9Rc6WNhNGJ">Discord</a></li>
+            <li><a href="https://github.com/kevin-powell">Github</a></li>
         </ul>
         <p>
-            © 2023 Nikola Sce Industries
+            © 2024 Kevin Powell Media INC.
         </p>
     </footer>
 
