--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <header class="primary-header">
+        <a id="skip-nav" class="screenreader-text" href="#main-content">Skip to content</a>
         <div class="nav-wrapper">
             <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
                 <span class="visually-hidden">Menu</span>
@@ -33,7 +34,7 @@
         </div>
     </header>
 
-    <main>
+    <main id="main-content">
 
         <div class="container ">
             <section aria-labelledby="hero-title" class="hero">
