added image, further adjustment needed

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
                 <h1 class="hero_title"> Hi, I'm Kevin. I teach people how to make the web and how to make it look good while they're at it.</h1>
 
                 <div class="hero-img">
-                    <img src="images/Nikola-pfp.jpg"
-                         alt="Put kevin or random photo later"
-                         height="380">
+                    <picture>
+                        <source srcset="images/f21b00ed-600.jpeg 600w" type="image/jpeg" />
+                        <img src="images/f21b00ed-600.jpeg" height="300" width="300" loading="lazy" decoding="async" alt="Kevin smiling" />
+                    </picture>
                 </div>
 
                 <div class="hero_paragraph flow">
