--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@
 
 
 
-<body>
+<body class="youtube">
     <header class="primary-header">
         <a id="skip-nav" class="screenreader-text" href="#main-content">Skip to content</a>
         <div class="nav-wrapper">
@@ -36,116 +36,42 @@
 
     <main id="main-content">
 
-        <div class="container ">
-            <section aria-labelledby="hero-title" class="hero">
-                <h1 class="hero_title"> Hi, I'm Kevin. I teach people how to make the web and how to make it look good while they're at it.</h1>
+        <div class="container flow">
+            <h1 class="title">About me</h1>
+            <p>Hi there! My name is Kevin and I'm a CSS Evangelist.
+                I absolutely love CSS, and I want to help new front-end devs enjoy learning it, and help seasoned vets see how great it really is.
+            </p>
+            <p>
+                Most of my content is over on YouTube, but I also stream on Twitch, 
+                and write articles every now and then as well, not to mention my courses.
+            </p>
 
-                <div class="hero-img">
-                    <picture>
-                        <source srcset="images/f21b00ed-600.jpeg 600w" type="image/jpeg" />
-                        <img src="images/f21b00ed-600.jpeg" height="300" width="300" loading="lazy" decoding="async" alt="Kevin smiling" />
-                    </picture>
-                </div>
+            <h2>YouTube</h2>
+            <p>
+                <strong>Weekly front-end web development & design tips, tricks, and tutorials</strong>
+                .With a focus on HTML & CSS, along with a splash of JS, some videos focus on properly understanding fundamental concepts, others explore little known or often misused CSS properties,
+                and there are long series that explore taking everything and building out actual pages.
+            </p>
+            <p><a href="https://www.youtube.com/kevinpowell">My YouTube channel</a> is where everything started, and it’s what continues to drive things.</p>
 
-                <div class="hero_paragraph flow">
-                    <p>
-                        I learned to make websites on my own. I know how fun and rewarding it is, but I also know that it can be incredibly frustrating.
-                        <strong>I'm here to help make your journey into web development as easy and as fun as possible.</strong>
-                    </p>
-                    <p>
-                        Whether you're trying to learn what you need to tweak your small business' website or you're looking to jump start a new career, I'm here to help.
-                    </p>
-                </div>
+            <h2>Twitch</h2>
+            <p>While YouTube is fun, there is something different when it comes to livestreams. They show a more realistic example of how we tackle problems, and it's also a lot of fun interacting with the chat!</p>
+            <p>I'd love to see you during one of my streams <a href="https://www.twitch.tv/kevinpowellcss">over on Twitch</a>, and if I'm not live, you can catch replays of previous streams there as well.</p>
 
-                <!--idea to put icons to the sidebar either left or right-->
-                <!--<div class="icons">
-                    <a href="https://www.youtube.com/@nikolasce9"><i class="ri-youtube-line"></i></a>
-                    <a href="https://www.instagram.com/nikolasce/"><i class="ri-instagram-line"></i></a>
-                    <a href="In progress"><i class="ri-twitter-x-line"></i></a>
-                    <a href="https://github.com/Nikolascerbakov"><i class="ri-github-fill"></i></a>
-                    <a href="https://www.facebook.com/nikola.scerbakov"><i class="ri-facebook-circle-line"></i></a>
-                    <a href=""><i class="ri-dribbble-line"></i></a>
-                </div>-->
-
-
-            </section>
-
-
-        </div>
-
-        <section aria-labelledby="youtube-title" class="home-section youtube">
-
-            <div class="container flow">
-                <header>
-                    <h2 class="section_title">youtube</h2>
-                    <p class="section_subtitle">learn for free</p>
-                </header>
-                <p>
-                    <strong>Weekly front-end web development & design tips, tricks, and tutorials. </strong>
-                    With a focus on HTML & CSS, along with a splash of JS, my videos focus on understanding <strong>fundamental concepts,</strong>
-                    others explore <strong>little known or often misused CSS properties,</strong>  and there are long series that explore taking everything and <strong>building out actual pages.</strong>
-                </p>
-                <p></p>
-                <a href="https://www.youtube.com/kevinpowell" class="button">Watch on yt</a>
-
-            </div>
-
-
-        </section>
-
-        <section aria-labelledby="article-title" class="home-section article">
-            <div class="container flow">
-                <header>
-                    <h2 class="section_title">articles</h2>
-                    <p class="section_subtitle">quick hit tips & tricks</p>
-                </header>
-                <p>
-                    While creating my YouTube videos, I come across a lot of
-                    <strong>fun snippets of information and little known CSS properties </strong>
-                    that aren't really worth building full videos about.
-                </p>
-                <p>
-                    I share these little bits of information — plus the occasional deep dive — through my articles.
-                </p>
-                <a href="#" class="button">let's get reading</a>
-            </div>
-
-        </section>
-
-        <section aria-labelledby="courses-title" class="home-section course">
-            <div class="container flow volleyballDiv">
-                <header>
-                    <h2 class="section_title text-neutral-100">courses</h2>
-                    <p class="section_subtitle text-neutral-100">step up your front-end game</p>
-                </header>
-                <p>
-                    <strong>Premium courses to help you step up your front-end game in short order.</strong>
-                </p>
-                <p>
-                    While there are a ton of free resources out there, it can be hard to figure out which ones are good, which are bad, and in what order to follow them in.
-                    Because of that, I’ve decided to start creating premium courses to help.
-                    <strong>They are deep dives into specific topics, helping you level up your game in as little time as possible</strong>
-                </p>
-                <p>
-                    I have a number of courses available covering a wide range of CSS goodness. Check out my <a href="">courses page</a> to see them all.
-                </p>
-                <a href="#" class="button" data-reverse="true">LET'S STEP UP MY GAME</a>
-            </div>
-        </section>
-
-        <section aria-labelledby="patreon-title" class="home-section patreon" style="--clr: #e12911">
-            <div class="container flow">
-                <header>
-                    <h2 class="section_title">patreon</h2>
-                    <p class="section_subtitle">help support me</p>
-                </header>
-                <p>
-                    Patreon is a nice, simple way to support creators who provide you with value.
-                    Thanks to my patrons I've been able to upgrade my equipment a few times now, and they've enabled me to devote more time to making videos.
-                </p>
-                <a href="https://patreon.com/kevinpowell" class="button">support me on Patreon</a>
-            </div>
-        </section>
+            <h2>How I got here</h2>
+            <p>I never in my life imagined that I'd have a successful YouTube channel and that people would actually want to purchase courses from me!</p>
+            <p>Way back in the day I studied Film, and then I managed to get a BA in Urban Studies, and then, eventually, a vocational degree in Graphic Design, and it's that design degree that sort of kicked things off.</p>
+            <p>Going way back though, I made my first web pages back in the late 90s when I was still in highschool. It involved a lot of Photoshop designs, slicing things up, and building layouts using HTML tables. It might sound terrible (it was), but it was a ton of fun.</p>
+            <p>Photoshop and making pages as a hobby were something I kept doing for years, on and off. This makes it really hard to answer when people ask me how long it takes to learn something as well as I know it, because I've been doing it for a long time 😅.</p>
+            <p>That said, I only started to really take it seriously when I was getting my design degree, and then moreso when I was working as a designer. </p>
+            <p>At the small company that I worked at, I primarily focused on print design. I was also not paid very much, so I started doing freelance work on the side, and that freelance work was almost all UI design. </p>
+            <p>I figured that since people were willing to pay me for designing a site, they might also pay me to actually build it as well, and I really dove in to that side of things, and it turned out that I enjoyed making sites more than I enjoyed designing them.</p>
+            <p>Then one day, something really unexpected happened. Out of the blue, one of my old design teachers called me up and said that the school was looking for teachers and the next thing I knew, I was teaching!</p>
+            <p>While the school primarily focuses on print design, it has a few web classes as well, and with some experience there, I quickly became one of the go to web teachers, and I absolutely loved it.</p>
+            <p>The only downside was the web classes were all introductory ones, and after 2 years, I was looking for more, and I decided to start my own YouTube channel. The idea here was more about keeping up to date and giving myself a reason to keep on learning and pushing and going deeper. I never had planned for it to grow and become something that would grow to what it's become today.</p>
+            <p>But here we are!</p>
+        </div> 
+            
 
 
     </main>
@@ -162,7 +88,7 @@
             <li><a href="https://github.com/kevin-powell">GitHub</a></li>
         </ul>
         <p>
-            © 2024 Kevin Powell Media INC.
+            © 2024 Kevin Powell Media Inc.
         </p>
     </footer>
 
