--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <li><a href="https://github.com/kevin-powell">GitHub</a></li>
         </ul>
         <p>
-            © 2024 Kevin Powell Media INC.
+            © 2024 Kevin Powell Media Inc.
         </p>
     </footer>
 
