--- a/Newsletter.html
+++ b/Newsletter.html
@@ -85,7 +85,7 @@
             <li><a href="https://github.com/kevin-powell">GitHub</a></li>
         </ul>
         <p>
-            © 2024 Kevin Powell Media Inc.
+            C 2024 Kevin Powell Media Inc.
         </p>
     </footer>
 
