--- a/Articles.html
+++ b/Articles.html
@@ -32,7 +32,7 @@
     <main id="main-content">
 
         <div class="container flow">
-            <h1 class="title">My articles</h1>
+            <h1 class="title">My Articles</h1>
             <article class="article-snippet flow">
                 <h2 class="text-neutral-800 article-snippet-title">Dealing with the "webiness" of CSS</h2>
                 <br />
