--- a/Articles.html
+++ b/Articles.html
@@ -140,13 +140,8 @@
             <nav aria-labelledby="my-pagination" class="flow">
                 <h2 id="my-pagination">More articles</h2>
                 <ol class="pagination" role="list">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li><a href="Articles.html" aria-current="page" class="current-page"><span class="sr-only">Page</span>1</a></li>
+                    <li><a href="Articles1.html"><span class="sr-only">Page</span>2</a></li>
                 </ol>
             </nav>
 
