--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <p>
                     I share these little bits of information — plus the occasional deep dive — through my articles.
                 </p>
-                <a href="#" class="button">let's get reading</a>
+                <a href="Articles.html" class="button">let's get reading</a>
             </div>
 
         </section>
@@ -130,7 +130,7 @@
                 <p>
                     I have a number of courses available covering a wide range of CSS goodness. Check out my <a href="">courses page</a> to see them all.
                 </p>
-                <a href="#" class="button" data-reverse="true">LET'S STEP UP MY GAME</a>
+                <a href="Courses.html" class="button" data-reverse="true">LET'S STEP UP MY GAME</a>
             </div>
         </section>
 
