cleaning up code

--- a/Articles.html
+++ b/Articles.html
@@ -20,7 +20,7 @@
         <nav class="primary-navigation">
             <ul aria-label="Primary" role="list" class="nav-list">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="Articles.html">Articles</a></li>
+                <li class="active"><a href="Articles.html">Articles</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Courses.html">Courses</a></li>
                 <li><a href="Resources.html">Resources</a></li>
