--- a/Resources.html
+++ b/Resources.html
@@ -23,7 +23,7 @@
                     <li><a href="Articles.html">Articles</a></li>
                     <li><a href="About.html">About</a></li>
                     <li><a href="Courses.html">Courses</a></li>
-                    <li><a href="Resources.html">Resources</a></li>
+                    <li class="active"><a href="Resources.html">Resources</a></li>
                     <li><a href="Newsletter.html">Newsletter</a></li>
                 </ul>
             </nav>
