--- a/About.html
+++ b/About.html
@@ -21,7 +21,7 @@
                 <ul aria-label="Primary" role="list" class="nav-list">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="Articles.html">Articles</a></li>
-                    <li><a href="About.html">About</a></li>
+                    <li class="active"><a href="About.html">About</a></li>
                     <li><a href="Courses.html">Courses</a></li>
                     <li><a href="Resources.html">Resources</a></li>
                     <li><a href="Newsletter.html">Newsletter</a></li>
