--- a/Courses.html
+++ b/Courses.html
@@ -22,7 +22,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Articles.html">Articles</a></li>
                 <li><a href="About.html">About</a></li>
-                <li><a href="Courses.html">Courses</a></li>
+                <li class="active"><a href="Courses.html">Courses</a></li>
                 <li><a href="Resources.html">Resources</a></li>
                 <li><a href="Newsletter.html">Newsletter</a></li>
             </ul>
