--- a/index.html
+++ b/index.html
@@ -17,13 +17,9 @@
 <body>
     <header class="primary-header">
         <a id="skip-nav" class="screenreader-text" href="#main-content">Skip to content</a>
-        <div class="nav-wrapper">
-            <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
-                <span class="visually-hidden">Menu</span>
-            </button>
             <nav class="primary-navigation">
                 <ul aria-label="Primary" role="list" class="nav-list">
-                    <li><a href="index.html">Home</a></li>
+                    <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="Articles.html">Articles</a></li>
                     <li><a href="About.html">About</a></li>
                     <li><a href="Courses.html">Courses</a></li>
@@ -31,7 +27,6 @@
                     <li><a href="Newsletter.html">Newsletter</a></li>
                 </ul>
             </nav>
-        </div>
     </header>
 
     <main id="main-content">
