--- a/Articles1.html
+++ b/Articles1.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kevin Powell | CSS Evangelist</title>
     <link href="style.css" rel="stylesheet" />
-
-    <link rel="stylesheet"
-          href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 
 
@@ -68,7 +64,7 @@
             <li><a href="https://github.com/kevin-powell">GitHub</a></li>
         </ul>
         <p>
-            © 2024 Kevin Powell Media Inc.
+            ï¿½ 2024 Kevin Powell Media Inc.
         </p>
     </footer>
 
