--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
             </div>
         </section>
 
+        <button onclick="topFunction()" id="buttonTop" title="Go to top" class="buttonTop">Top</button>
+
 
     </main>
 
@@ -145,6 +147,27 @@
         </p>
     </footer>
 
-    <script type="module" src="/main.js"></script>
+    <script>
+        // Get the button:
+        let mybutton = document.getElementById("buttonTop");
+
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function () { scrollFunction() };
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 150 || document.documentElement.scrollTop > 150) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
+            }
+        }
+
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0; // For Safari
+            document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+        }
+
+    </script>
 </body>
 </html>
